Basic sbt structure