@@ -7,18 +7,6 @@ import sbtorgpolicies.templates._
 import sbtorgpolicies.templates.badges._
 import scoverage.ScoverageKeys
 
-val V = new {
-  val betterMonadicFor = "0.2.4"
-  val cats             = "1.5.0"
-  val catsScalacheck   = "0.1.0"
-  val hammock          = "0.8.7"
-  val kindProjector    = "0.9.9"
-  val macroParadise    = "2.1.1"
-  val scalacheck       = "1.13.5"
-  val enumeratum       = "1.5.13"
-  val specs2           = "4.1.0" // DO NOT BUMP. We need all dependent libraries to bump version of scalacheck to 1.14, otherwise we face a bincompat issue between scalacheck 1.14 & scalacheck 1.13.5
-}
-
 lazy val root = project
   .in(file("."))
   .enablePlugins(SbtPlugin)
@@ -79,7 +67,13 @@ lazy val commonSettings = Seq(
     organizationEmail = "hello@47deg.com"
   ),
   scriptedLaunchOpts := { scriptedLaunchOpts.value ++
-    Seq("-Xmx1024M", "-Dplugin.version=" + version.value)
+    Seq(
+      "-Xmx1024M",
+      "-XX:ReservedCodeCacheSize=256m",
+      "-XX:+UseConcMarkSweepGC",
+      "-Dplugin.version=" + version.value,
+      "-Dscala.version=" + scalaVersion.value
+    )
   },
   scriptedBufferLog := false,
   scalaVersion := "2.12.8",
@@ -96,7 +90,7 @@ lazy val commonSettings = Seq(
     "com.beachape" %% "enumeratum" % V.enumeratum,
     "io.chrisdavenport"     %% "cats-scalacheck" % V.catsScalacheck % Test excludeAll(
       ExclusionRule(organization="org.scalacheck")
-    )
+      )
   ),
   orgProjectName := "sbt-compendium",
   orgUpdateDocFilesSetting += baseDirectory.value / "readme",
